Added dev experience with Solace

--- a/index.html
+++ b/index.html
@@ -70,7 +70,20 @@
 										    <div class="resume-position-time">2016 - 2018</div>
 									    </div><!--//resume-timeline-item-header-->
 									    <div class="resume-timeline-item-desc">
-										    <p>Built Solace PubSub+ Cloud</p>
+										    <p>Member of the initial team that developed the cloud SaaS offering, Solace PubSub+ Cloud.</p>
+											<p>Developed the microservices responsible for metric collection, reporting, and billing.</p>
+											<p>Developed the first iteration of the microservice that orchestrated the creation of AWS infrastructure.</p>
+											<p>Designed the build and install infrastructure.</p>
+											<ul class="list-inline">
+												<li class="list-inline-item"><span class="badge badge-primary badge-pill">Java</span></li>
+												<li class="list-inline-item"><span class="badge badge-primary badge-pill">SpringBoot</span></li>
+												<li class="list-inline-item"><span class="badge badge-primary badge-pill">ElasticSearch</span></li>
+												<li class="list-inline-item"><span class="badge badge-primary badge-pill">AWS</span></li>
+												<li class="list-inline-item"><span class="badge badge-primary badge-pill">Bash</span></li>
+												<li class="list-inline-item"><span class="badge badge-primary badge-pill">Ansible</span></li>
+												<li class="list-inline-item"><span class="badge badge-primary badge-pill">Jenkins</span></li>
+												<li class="list-inline-item"><span class="badge badge-primary badge-pill">Docker</span></li>
+											</ul>
 									    </div><!--//resume-timeline-item-desc-->
 								    </article><!--//resume-timeline-item-->
 
