--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Julian Setiawan Resume">
     <meta name="author" content="Julian Setiawan">
+	<meta name="google-site-verification" content="oJAM6xH7B2Bn8j1EuUbWUWVOfitokfxV9hrdK_XRj50" />
     <link rel="shortcut icon" href="favicon.ico">
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900" rel="stylesheet">
