Add Medium link

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 						    <ul class="resume-social list-unstyled">
 				                <li class="mb-3"><a href="https://linkedin.com/in/jsetiawan"><span class="fa-container text-center mr-2"><i class="fab fa-linkedin-in fa-fw"></i></span>linkedin.com/in/jsetiawan</a></li>
 				                <li class="mb-3"><a href="https://github.com/j-setiawan"><span class="fa-container text-center mr-2"><i class="fab fa-github-alt fa-fw"></i></span>github.com/j-setiawan</a></li>
+				                <li class="mb-3"><a href="https://medium.com/@jsetiawan"><span class="fa-container text-center mr-2"><i class="fab fa-medium fa-fw"></i></span>medium.com/@jsetiawan</a></li>
 						    </ul>
 					    </div><!--//secondary-info-->
 
