--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta name="google-site-verification" content="oJAM6xH7B2Bn8j1EuUbWUWVOfitokfxV9hrdK_XRj50" />
     <link rel="shortcut icon" href="favicon.ico">
     <!-- Google Font -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap" rel="stylesheet">
     <!-- FontAwesome JS-->
     <script defer src="https://use.fontawesome.com/releases/v5.1.1/js/all.js" integrity="sha384-BtvRZcyfv4r0x/phJt9Y9HhnN5ur1Z+kZbKVgzVBAlQZX4jvAuImlIz+bG7TS00a" crossorigin="anonymous"></script>
     <!-- Theme CSS -->
@@ -22,7 +22,7 @@
 	    <div class="resume-wrapper-inner mx-auto text-left bg-white shadow-lg">
 		    <header class="resume-header pt-4 pt-md-0">
 			    <div class="media flex-column flex-md-row">
-				    <img class="mr-3 img-fluid picture mx-auto" src="assets/images/profile.png" alt="">
+				    <img class="mr-3 img-fluid picture mx-auto" src="assets/images/profile.webp" alt="Julian Setiawan">
 				    <div class="media-body p-4 d-flex flex-column flex-md-row mx-auto mx-lg-0">
 					    <div class="primary-info">
 						    <h1 class="name mt-0 mb-1 text-white text-uppercase text-uppercase">Julian Setiawan</h1>
